--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,6 @@ body {
     font-family: Arial, sans-serif;
     background: #f4f4f9;
 }
-
 .navbar {
     display: flex;
     justify-content: space-between;
@@ -50,20 +49,6 @@ body {
     border-radius: 4px;
 }
 
-.navbar-toggle {
-    display: none;
-    flex-direction: column;
-    cursor: pointer;
-}
-
-.navbar-toggle span {
-    background-color: white;
-    height: 3px;
-    margin: 4px;
-    width: 25px;
-    transition: 0.3s;
-}
-
 /* Estilos para el submenú */
 .submenu {
     display: none;
@@ -99,8 +84,62 @@ body {
     display: block;
 }
 
-/* Responsive Styles */
+/* Mostrar solo el título y el ícono de hamburguesa en dispositivos móviles */
+.navbar-toggle {
+    display: none;
+    flex-direction: column;
+    cursor: pointer;
+}
+
+.navbar-toggle span {
+    background-color: white;
+    height: 3px;
+    margin: 4px;
+    width: 25px;
+    transition: 0.3s;
+}
+
 @media (max-width: 768px) {
+    .navbar-menu {
+        display: none;
+        flex-direction: column;
+        align-items: center;
+        width: 100%;
+        background-color: #333;
+        position: fixed;
+        top: 0;
+        left: 0;
+        height: 100vh;
+        padding-top: 3.5rem; /* Para evitar el solapamiento con la barra */
+        z-index: 999;
+    }
+
+    .navbar-menu li {
+        margin-left: 0;
+    }
+
+    .navbar-menu a {
+        color: white;
+        text-decoration: none;
+        padding: 1rem;
+        display: block;
+    }
+
+    .navbar-toggle {
+        display: flex;
+        margin-right: 10px;
+    }
+
+    .navbar-menu.show {
+        display: flex;
+    }
+}
+
+
+/*FIN NUEVO */
+
+/* Responsive Styles */
+/*@media (max-width: 10px) {
     .navbar-menu {
         flex-direction: column;
         display: none;
@@ -123,13 +162,13 @@ body {
     }
 
     /* Mostrar submenú en dispositivos móviles al hacer clic */
-    .navbar-menu .dropdown:hover .submenu {
+/*    .navbar-menu .dropdown:hover .submenu {
         display: none;
     }
-}
+}*/
 
 .content {
-    padding-top: 40px; /* Altura de la barra de navegación para evitar que el contenido se superponga */
+    padding-top: 100px; /* Altura de la barra de navegación para evitar que el contenido se superponga */
 }
 
 section {
